@@ -1,5 +1,5 @@
 /*
- * $Id: misc.h,v 1.26 2008/04/11 22:42:04 sfeam Exp $
+ * $Id: misc.h,v 1.27 2008/04/13 19:25:14 sfeam Exp $
  */
 
 /* GNUPLOT - misc.h */
@@ -47,7 +47,6 @@
 
 /* Variables of misc.c needed by other modules: */
 
-extern char *infile_name;
 
 /* Prototypes from file "misc.c" */
 
